Added node_modules to gitignore, added gulp-concat as dev dependency

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/pcreglow/Treehouse-Website-Optimization/issues"
   },
-  "homepage": "https://github.com/pcreglow/Treehouse-Website-Optimization#readme"
+  "homepage": "https://github.com/pcreglow/Treehouse-Website-Optimization#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1"
+  }
 }
