--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.5.0",
     "gulp-concat": "^2.6.1",
+    "gulp-image": "^2.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0"
